--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "Pascal Baljet <pascal@protone.media>",
   "license": "MIT",
   "files": [
-    "dist"
+    "dist",
+    "js"
   ],
   "main": "./dist/inertiajs-tables-laravel-query-builder.umd.js",
   "module": "./dist/inertiajs-tables-laravel-query-builder.es.js",
